--- a/src/services/index.njk
+++ b/src/services/index.njk
@@ -57,6 +57,7 @@ description: "Askia coaching services to land top tech roles."
         </article>
       {% endfor %}
     </div>
+    <div class="carousel-dots" data-carousel-dots></div>
   </div>
 </section>
 
